# cs8803-02-summer-2017

gios-summer2017-pr1/: CMakeLists.txt  Installation.md  Readme.md  readme-student.md  submit.py
gios-summer2017-pr1/echo/: echoclient  echoclient.c  echoserver  echoserver.c
gios-summer2017-pr1/gflib/: gfclient.c  gfclient_download  gfclient_download.c  gfclient_download_old.c  gfserver.c  gfserver_main  gfserver_main.c  handler.c  workload.c
gios-summer2017-pr1/mtgf/: gfclient_download  gfclient_download.c  gfserver_main  gfserver_main.c  handler.c
gios-summer2017-pr1/transfer/: pr1_transfer-result-2017-06-09-12-05-59.json  transferclient  transferclient.c  transferserver  transferserver.c
gios-summer2017-pr3/: CMakeLists.txt  readme-student.md
gios-summer2017-pr3/cache/: Makefile  pr3_proxy_cache-result-2017-07-06-20-51-45.json  pr3_proxy_cache-result-2017-07-06-20-56-32.json  pr3_proxy_cache-result-2017-07-06-22-44-20.json  pr3_proxy_cache-result-2017-07-06-23-59-00.json  pr3_proxy_cache-result-2017-07-07-04-10-05.json  pr3_proxy_cache-result-2017-07-12-19-12-13.json  pr3_proxy_cache-result-2017-07-12-19-17-24.json  pr3_proxy_cache-result-2017-07-12-20-21-39.json  pr3_proxy_cache-result-2017-07-12-21-17-18.json  pr3_proxy_cache-result-2017-07-12-21-24-17.json  simplecached  webproxy  webproxy.c
gios-summer2017-pr3/extra/: gfserver.h  handle_with_curl.c  locals.txt  shm_channel.c  shm_channel.h  simplecached.c  webproxy.c  workload.txt
gios-summer2017-pr3/server/: handle_with_cache.c  metrics.txt  pr3_proxy_server-result-2017-07-06-20-46-17.json  pr3_proxy_server-result-2017-07-07-01-05-06.json  pr3_proxy_server-result-2017-07-07-01-49-00.json  pr3_proxy_server-result-2017-07-07-02-01-33.json  pr3_proxy_server-result-2017-07-07-18-39-26.json  shm_channel.c  shm_channel.h  (+2 more)
gios-summer2017-pr4/: CMakeLists.txt  Makefile  magickminify_test  minify_via_rpc.c  minifyjpeg.c  minifyjpeg.h  minifyjpeg.x  minifyjpeg_clnt.c  minifyjpeg_main  minifyjpeg_svc  minifyjpeg_svc.c  minifyjpeg_xdr.c  pr4_rpc-result-2017-07-19-20-09-48.json  pr4_rpc-result-2017-07-25-04-40-44.json  pr4_rpc-result-2017-07-25-04-52-46.json  pr4_rpc-result-2017-07-25-05-06-57.json  pr4_rpc-result-2017-07-25-05-14-23.json  pr4_rpc-result-2017-07-25-05-16-09.json  pr4_rpc-result-2017-07-25-05-43-37.json  pr4_rpc-result-2017-07-25-06-05-47.json  pr4_rpc-result-2017-07-25-06-33-17.json  readme-student.md
(+26 files in other folders)
